Added Haiti chart

--- a/graphs/Haiti.html
+++ b/graphs/Haiti.html
@@ -21,7 +21,7 @@
 /* Sizing and scales. */
 var w = 600,
     h = 400,
-    x = pv.Scale.linear(0, 140000).range(0, w),
+    x = pv.Scale.linear(0, 5).range(0, w),
     y = pv.Scale.linear(4, 9).range(0, h),
     c = pv.Scale.log(1, 2000).range("orange", "brown");
  
@@ -31,7 +31,7 @@ var vis = new pv.Panel()
     .height(h)
     .bottom(20)
     .left(20)
-    .right(10)
+    .right(100)
     .top(100);
  
 /* Y-axis and ticks. */
@@ -56,7 +56,7 @@ vis.add(pv.Rule)
 vis.add(pv.Panel)
     .data(data)
   .add(pv.Dot)
-    .left(function(d) (x(d.Damages)))
+    .left(function(d) (x(d.Development)))
     .bottom(function(d) (y(d.Severity)))
     .strokeStyle(function(d) c(d.Deaths))
     .fillStyle(function() this.strokeStyle().alpha(.2))
@@ -66,7 +66,7 @@ vis.add(pv.Panel)
 vis.add(pv.Panel)
  .data(data)
   .add(pv.Dot)
-    .left(function(d) (x(d.Damages)))
+    .left(function(d) (x(d.Development)))
     .bottom(function(d) (y(d.Severity)))
     .strokeStyle(function(d) c(d.Affected))
     .fillStyle(function() this.strokeStyle().alpha(.2))
