More heat wave stuff

--- a/graphs/heat_wave.html
+++ b/graphs/heat_wave.html
@@ -5,7 +5,7 @@
     <title>Disaster Math</title> 
     <link type="text/css" rel="stylesheet" href="css/styles.css"/> 
     <script type="text/javascript" src="js/protovis.js"></script> 
-    <script type="text/javascript" src="js/Haiti.js"></script> 
+    <script type="text/javascript" src="js/heat_wave.js"></script> 
     <style type="text/css"> 
  
 #fig {
