--- a/graphs/Japan.html
+++ b/graphs/Japan.html
@@ -4,7 +4,7 @@
     <title>Disaster Math</title> 
     <link type="text/css" rel="stylesheet" href="css/styles.css"/> 
     <script type="text/javascript" src="js/protovis.js"></script> 
-    <script type="text/javascript" src="js/Japan.js"></script> 
+    <script type="text/javascript" src="js/SEATsunami.js"></script> 
     <style type="text/css"> 
  
 #fig {
